crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__multi_status_shared_body_handlers.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.handlers
---
// Generated by Phoenix Gen — implement the handler methods below.

import type { UpsertUserResponse } from "./types";

export interface Handlers {
  upsertUser(id: string): Promise<UpsertUserResponse>;
}
