crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__multipart_optional_client.snap
---
source: crates/phoenix-codegen/src/typescript.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

import type { UploadBody } from "./types";

export let baseUrl = "";

export function setBaseUrl(url: string): void {
  baseUrl = url;
}

export const api = {
  async upload(body: UploadBody): Promise<void> {
    const formData = new FormData();
    if (body.avatar !== undefined) {
      formData.append("avatar", body.avatar);
    }
    formData.append("caption", String(body.caption));
    const response = await fetch(`${baseUrl}/api/maybe`, {
      method: "POST",
      body: formData,
    });
    if (!response.ok) {
      throw new Error(`${String(response.status)}: ${response.statusText}`);
    }
  },
};
