crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__multipart_optional_scalar_client.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

import type { UploadBody } from "./types";

export let baseUrl = "";

export function setBaseUrl(url: string): void {
  baseUrl = url;
}

export const api = {
  async upload(body: UploadBody): Promise<void> {
    const formData = new FormData();
    formData.append("avatar", body.avatar);
    if (body.rotation !== undefined) {
      formData.append("rotation", String(body.rotation));
    }
    const response = await fetch(`${baseUrl}/api/upload`, {
      method: "POST",
      body: formData,
    });
    if (!response.ok) {
      await response.body?.cancel().catch(() => undefined);
      throw new Error(`${String(response.status)}: ${response.statusText}`);
    }
    await response.body?.cancel().catch(() => undefined);
  },
};
