crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__multipart_optional_scalar_server.snap
---
source: crates/phoenix-codegen/src/typescript.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

import { Router } from "express";
import type { Request, Response } from "express";
import type { Handlers } from "./handlers";
import type { UploadBody } from "./types";

// A multipart middleware (multer, busboy, …) must be mounted upstream; it
// populates these fields on the request. Scalar form fields arrive on
// `body`; each uploaded file is expected as a `Blob` on `files`, keyed by
// field name. NOTE: standard parsers do not produce `Blob`s directly —
// multer's memory storage, for example, yields `{ buffer, originalname }`
// per field — so mount a tiny adapter that maps each parsed file to a
// `Blob`, e.g.:
//   const blobFiles: Record<string, Blob> = {};
//   for (const [field, parts] of Object.entries(req.files ?? {}))
//     blobFiles[field] = new Blob([parts[0].buffer]);
//   (req as unknown as MultipartRequest).files = blobFiles;
// (The original filename is not carried on a `Blob`; see the project docs.)
interface MultipartRequest {
  body: Record<string, string>;
  files: Record<string, Blob>;
}

export function createRouter(handlers: Handlers): Router {
  const router = Router();

  router.post("/api/upload", async (req: Request, res: Response) => {
    try {
      const multipart = req as unknown as MultipartRequest;
      const body: UploadBody = {
        avatar: multipart.files.avatar,
        rotation:
          multipart.body.rotation !== undefined
            ? Number(multipart.body.rotation)
            : undefined,
      };
      await handlers.upload(body);
      res.status(204).end();
    } catch {
      res.status(500).json({ error: "Internal Server Error" });
    }
  });

  return router;
}
